--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MemoryScope"
         mc:Ignorable="d"
-        Title="Калькулятор памяти" Height="450" Width="800" ResizeMode="NoResize" Topmost="False">
+        Title="Калькулятор памяти" Height="600" Width="1000" ResizeMode="NoResize" Topmost="False">
     <Grid x:Name="MainGrid" RenderTransformOrigin="0.5,0.5" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -18,14 +18,14 @@
             <RowDefinition Height="232*"></RowDefinition>
         </Grid.RowDefinitions>
         <Button x:Name="AddItem" Grid.Column="0" Grid.Row="0" Content="Добавить элемент" HorizontalAlignment="Left" Margin="43,26,0,0" VerticalAlignment="Top" Width="125" Height="42" Click="AddItem_Click"/>
-        <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Left" Height="153" Margin="10,26,0,0" VerticalAlignment="Top" Width="129">
-            <TextBlock x:Name="El1" Text="" Height="22"/>
-            <TextBlock x:Name="El2" Text="" Height="22"/>
-            <TextBlock x:Name="El3" Text="" Height="22"/>
-            <TextBlock x:Name="El4" Text="" Height="22"/>
-            <TextBlock x:Name="El5" Text="" Height="22"/>
-            <TextBlock x:Name="El6" Text="" Height="22"/>
-            <TextBlock x:Name="El7" Text="" Height="22"/>
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Height="153" Margin="201,26,0,0" VerticalAlignment="Top" Width="187" Grid.ColumnSpan="2">
+            <TextBlock x:Name="El1" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El2" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El3" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El4" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El5" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El6" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El7" Text="" Height="22" FontSize="14"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Left" Height="153" Margin="139,26,0,0" VerticalAlignment="Top" Width="39">
             <Button x:Name="Add1" Content="Add" Height="22" IsEnabled="False" Click="AddItem_Click"/>
@@ -36,14 +36,14 @@
             <Button x:Name="Add6" Content="Add" Height="22" IsEnabled="False" Click="AddItem_Click"/>
             <Button x:Name="Add7" Content="Add" Height="22" IsEnabled="False" Click="AddItem_Click"/>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Left" Height="153" Margin="10,26,0,0" VerticalAlignment="Top" Width="129">
-            <TextBlock x:Name="El8" Text="" Height="22"/>
-            <TextBlock x:Name="El9" Text="" Height="22"/>
-            <TextBlock x:Name="El10" Text="" Height="22"/>
-            <TextBlock x:Name="El11" Text="" Height="22"/>
-            <TextBlock x:Name="El12" Text="" Height="22"/>
-            <TextBlock x:Name="El13" Text="" Height="22"/>
-            <TextBlock x:Name="El14" Text="" Height="22"/>
+        <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Left" Height="153" Margin="201,26,0,0" VerticalAlignment="Top" Width="187" Grid.ColumnSpan="2">
+            <TextBlock x:Name="El8" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El9" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El10" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El11" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El12" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El13" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El14" Text="" Height="22" FontSize="14"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Left" Height="153" Margin="139,26,0,0" VerticalAlignment="Top" Width="39">
             <Button x:Name="Add8" Content="Add" Height="22" IsEnabled="False" Click="AddItem_Click"/>
@@ -54,34 +54,34 @@
             <Button x:Name="Add13" Content="Add" Height="22" IsEnabled="False" Click="AddItem_Click"/>
             <Button x:Name="Add14" Content="Add" Height="22" IsEnabled="False" Click="AddItem_Click"/>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Column="3" HorizontalAlignment="Left" Height="153" Margin="10,26,0,0" VerticalAlignment="Top" Width="129">
-            <TextBlock x:Name="El15" Text="" Height="22"/>
-            <TextBlock x:Name="El16" Text="" Height="22"/>
-            <TextBlock x:Name="El17" Text="" Height="22"/>
-            <TextBlock x:Name="El18" Text="" Height="22"/>
-            <TextBlock x:Name="El19" Text="" Height="22"/>
-            <TextBlock x:Name="El20" Text="" Height="22"/>
-            <TextBlock x:Name="El21" Text="" Height="22"/>
+        <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Left" Height="153" Margin="195,26,0,0" VerticalAlignment="Top" Width="255" Grid.ColumnSpan="2">
+            <TextBlock x:Name="El15" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El16" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El17" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El18" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El19" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El20" Text="" Height="22" FontSize="14"/>
+            <TextBlock x:Name="El21" Text="" Height="22" FontSize="14"/>
         </StackPanel>
-        <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Background="Pink" Height="206" Margin="110,16,0,0" Grid.Row="1" VerticalAlignment="Top" Width="178">
-            <Label Content="Stack" HorizontalAlignment="Center"/>
-            <TextBlock x:Name="S1" Text=""/>
-            <TextBlock x:Name="S2" Text=""/>
-            <TextBlock x:Name="S3" Text=""/>
-            <TextBlock x:Name="S4" Text=""/>
-            <TextBlock x:Name="S5" Text=""/>
-            <TextBlock x:Name="S6" Text=""/>
-            <TextBlock x:Name="S7" Text=""/>
+        <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Background="Pink" Height="206" Margin="110,16,0,0" Grid.Row="1" VerticalAlignment="Top" Width="278">
+            <Label Content="Stack" HorizontalAlignment="Center" FontWeight="Bold" FontSize="18"/>
+            <TextBlock x:Name="S1" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="S2" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="S3" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="S4" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="S5" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="S6" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="S7" Text="" FontSize="14" Height="24"/>
         </StackPanel>
-        <StackPanel Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" Background="SteelBlue" Height="206" Margin="110,16,0,0" Grid.Row="1" VerticalAlignment="Top" Width="178">
-            <Label Content="Heap" HorizontalAlignment="Center"/>
-            <TextBlock x:Name="H1" Text=""/>
-            <TextBlock x:Name="H2" Text=""/>
-            <TextBlock x:Name="H3" Text=""/>
-            <TextBlock x:Name="H4" Text=""/>
-            <TextBlock x:Name="H5" Text=""/>
-            <TextBlock x:Name="H6" Text=""/>
-            <TextBlock x:Name="H7" Text=""/>
+        <StackPanel Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" Background="SteelBlue" Height="206" Margin="110,16,0,0" Grid.Row="1" VerticalAlignment="Top" Width="277">
+            <Label Content="Heap" HorizontalAlignment="Center" FontWeight="Bold" FontSize="18"/>
+            <TextBlock x:Name="H1" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="H2" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="H3" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="H4" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="H5" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="H6" Text="" FontSize="14" Height="24"/>
+            <TextBlock x:Name="H7" Text="" FontSize="14" Height="24"/>
         </StackPanel>
         <WrapPanel x:Name="InputPanel" Grid.ColumnSpan="3" Margin="143,52,75,192" Grid.RowSpan="2" Background="Gray" IsEnabled="False" Visibility="Hidden">
             <Label Content="Значения" Width="180"/>
